refactor: minor changes

--- a/examples/hello-world/src/tsconfig.aot.json
+++ b/examples/hello-world/src/tsconfig.aot.json
@@ -23,6 +23,7 @@
   ],
   "angularCompilerOptions": {
     "genDir": "aot",
-    "skipMetadataEmit" : true
+    "skipMetadataEmit" : true,
+    "entryModule": "app/app.module#AppModule"
   }
 }
