--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "preclient": "npm run build",
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "client": "ng serve --proxy-conf proxy.conf.json",
+    "client": "ng serve --proxy-conf proxy.conf.json --port 4200",
     "server": "nodemon api/index.js --watch api --exec babel-node",
     "build": "./node_modules/.bin/ngc -p src/tsconfig.aot.json",
     "test": "npm run build",
