--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -28,6 +28,7 @@
     "angular2-apollo": "file:../../",
     "apollo-client": "~0.5.1",
     "core-js": "~2.4.0",
+    "graphql-tag": "^1.1.2",
     "rxjs": "5.0.0-rc.4",
     "ts-helpers": "~1.1.1",
     "zone.js": "~0.7.2"
