--- a/examples/hello-universe/package.json
+++ b/examples/hello-universe/package.json
@@ -10,7 +10,8 @@
     "server": "nodemon api/index.js --watch api --exec babel-node",
     "build": "./node_modules/.bin/ngc -p src/tsconfig.aot.json",
     "postbuild": "npm run tree-shaking",
-    "tree-shaking": "node_modules/.bin/rollup -c rollup.config.js"
+    "tree-shaking": "node_modules/.bin/rollup -c rollup.config.js",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
@@ -58,6 +59,19 @@
     "rollup-plugin-uglify": "^1.0.1",
     "ts-node": "1.2.1",
     "tslint": "~3.15.0",
-    "typescript": "~2.0.6"
+    "typescript": "~2.0.6",
+    "@angular/compiler-cli": "2.2.1",
+    "@types/jasmine": "2.5.38",
+    "jasmine-core": "2.5.2",
+    "jasmine-spec-reporter": "2.5.0",
+    "karma": "1.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.0.2",
+    "karma-remap-istanbul": "^0.2.1",
+    "protractor": "4.0.9",
+    "webdriver-manager": "10.2.5",
+    "@types/chai": "3.4.34",
+    "typed-graphql": "1.0.2"
   }
 }
