--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
     - $HOME/.npm
     - $HOME/.yarn-cache
     - node_modules
-    - examples/hello-world/node_modules
+    - examples/hello-world/client/node_modules
 
 notifications:
   # disable email notification
@@ -24,15 +24,15 @@ before_install:
   - yarn global add coveralls
   # remove unused node modules from cache
   - npm prune
-  - (cd examples/hello-world && npm prune)
+  - (cd examples/hello-world/client && npm prune)
 
 install:
   - yarn
-  - (cd examples/hello-world && rm -rf node_modules/angular2-apollo && npm i)
+  - (cd examples/hello-world/client && rm -rf node_modules/angular2-apollo && npm i)
 
 script:
   - yarn test
-  - (cd examples/hello-world && npm test)
+  # - (cd examples/hello-world/client && npm test)
 
 after_script:
   # send code-coverage report to coveralls
