--- a/examples/hello-world/client/.gitignore
+++ b/examples/hello-world/client/.gitignore
@@ -3,18 +3,24 @@
 # compiled output
 /dist
 /tmp
-/src/aot
 
 # dependencies
 /node_modules
-/bower_components
 
 # IDEs and editors
 /.idea
 .project
 .classpath
+.c9/
 *.launch
 .settings/
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # misc
 /.sass-cache
@@ -23,6 +29,7 @@
 /libpeerconnection.log
 npm-debug.log
 testem.log
+/typings
 
 # e2e
 /e2e/*.js
