--- a/examples/hello-world/client/src/tsconfig.json
+++ b/examples/hello-world/client/src/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "",
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -12,13 +13,6 @@
     "target": "es5",
     "typeRoots": [
       "../node_modules/@types"
-    ],
-    "types": [
-      "node",
-      "isomorphic-fetch"
     ]
-  },
-  "files": [
-    "main.ts"
-  ]
+  }
 }
