--- a/package.json
+++ b/package.json
@@ -34,19 +34,19 @@
   "peerDependencies": {
     "@angular/core": "^2.0.0",
     "apollo-client": "^0.5.1",
-    "rxjs": "^5.0.0-beta.12 || ^5.0.0-rc.1"
+    "rxjs": "^5.0.1"
   },
   "dependencies": {
     "apollo-client-rxjs": "~0.2.3"
   },
   "devDependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/compiler-cli": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/platform-server": "^2.3.1",
+    "@angular/common": "^2.4.0",
+    "@angular/compiler": "^2.4.0",
+    "@angular/compiler-cli": "^2.4.0",
+    "@angular/core": "^2.4.0",
+    "@angular/platform-browser": "^2.4.0",
+    "@angular/platform-browser-dynamic": "^2.4.0",
+    "@angular/platform-server": "^2.4.0",
     "@types/chai": "^3.4.34",
     "@types/isomorphic-fetch": "^0.0.30",
     "@types/jest": "^15.1.32",
