--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "postbuild": "npm run bundle",
     "bundle": "rollup -c",
     "clean": "rimraf build/* coverage/*",
-    "prepublish": "npm run clean && npm run build"
+    "prepublish": "npm run clean && npm run build",
+    "commitmsg": "validate-commit-msg"
   },
   "peerDependencies": {
     "@angular/core": "^2.0.0",
@@ -52,8 +53,8 @@
     "@types/lodash": "^4.14.34",
     "@types/node": "^6.0.38",
     "apollo-client": "^0.5.1",
-    "ghooks": "^1.3.2",
     "graphql-tag": "^1.0.0",
+    "husky": "^0.12.0",
     "jest": "^17.0.0",
     "reflect-metadata": "^0.1.8",
     "remap-istanbul": "^0.8.4",
@@ -65,11 +66,6 @@
     "typescript": "~2.0.6",
     "validate-commit-msg": "^2.8.2",
     "zone.js": "^0.7.1"
-  },
-  "config": {
-    "ghooks": {
-      "commit-msg": "validate-commit-msg"
-    }
   },
   "jest": {
     "moduleFileExtensions": [
