Add webpack loader (#25)

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,6 +31,7 @@ sidebar_categories:
     - server-side-rendering
     - angular-cli
     - ahead-of-time
+    - webpack
 github_repo: apollostack/angular2-docs
 content_root: source
 
