chore: update to apollo-client@0.6.0

--- a/examples/hello-world/.gitignore
+++ b/examples/hello-world/.gitignore
@@ -7,14 +7,21 @@
 
 # dependencies
 /node_modules
-/bower_components
 
 # IDEs and editors
 /.idea
 .project
 .classpath
+.c9/
 *.launch
 .settings/
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # misc
 /.sass-cache
@@ -23,6 +30,7 @@
 /libpeerconnection.log
 npm-debug.log
 testem.log
+/typings
 
 # e2e
 /e2e/*.js
