Add nav item to redux docs.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,6 +28,7 @@ sidebar_categories:
     - optimistic-ui
     - fragments
     - prefetching
+    - redux
     - server-side-rendering
     - angular-cli
     - ahead-of-time
