--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular2-apollo",
-  "version": "0.9.0",
+  "name": "apollo-angular",
+  "version": "0.9.1",
   "description": "Angular 2.0 client for Apollo",
   "main": "build/bundles/apollo.umd.js",
   "module": "build/src/index.js",
@@ -9,12 +9,12 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/apollostack/angular2-apollo.git"
+    "url": "git+https://github.com/apollostack/apollo-angular.git"
   },
   "bugs": {
-    "url": "https://github.com/apollostack/angular2-apollo/issues"
+    "url": "https://github.com/apollostack/apollo-angular/issues"
   },
-  "homepage": "https://github.com/apollostack/angular2-apollo#readme",
+  "homepage": "https://github.com/apollostack/apollo-angular#readme",
   "scripts": {
     "pretest": "npm run build-test",
     "test": "npm run test-only",
