refactor: rename Angular2Apollo to Apollo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
   },
   "files": [
     "src/index.ts",
-    "tests/Angular2Apollo.spec.ts",
+    "tests/Apollo.spec.ts",
     "tests/SelectPipe.spec.ts",
     "tests/ApolloModule.spec.ts"
   ],
