chore: clean before npm run build

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "test-watch": "jest --watch",
     "remap": "remap-istanbul -i coverage/coverage-final.json -t lcovonly -o coverage/lcov.info",
     "lint": "tslint src/*.ts && tslint tests/*.ts",
+    "prebuild": "npm run clean",
     "build": "./node_modules/.bin/ngc -p tsconfig.json",
+    "prebuild-test": "npm run clean",
     "build-test": "./node_modules/.bin/ngc -p tsconfig.test.json",
     "postbuild": "npm run bundle",
     "bundle": "rollup -c",
