WIP: multiple clients

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,6 +22,7 @@ sidebar_categories:
     - mutations
     - receiving-updates
     - cache-updates
+    - multiple-clients
   Recipes:
     - auth
     - pagination
