--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -33,6 +33,7 @@ sidebar_categories:
     - angular-cli
     - ahead-of-time
     - webpack
+    - typescript
 github_repo: apollostack/angular2-docs
 content_root: source
 
