--- a/examples/hello-universe/package.json
+++ b/examples/hello-universe/package.json
@@ -4,74 +4,52 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
-    "preclient": "npm run build",
     "start": "concurrently \"npm run server\" \"npm run client\"",
-    "client": "ng serve --proxy-conf proxy.conf.json",
+    "client": "ng serve --aot --proxy-conf proxy.conf.json --port 4200",
     "server": "nodemon api/index.js --watch api --exec babel-node",
-    "build": "./node_modules/.bin/ngc -p src/tsconfig.aot.json",
-    "postbuild": "npm run tree-shaking",
-    "tree-shaking": "node_modules/.bin/rollup -c rollup.config.js",
-    "test": "ng test"
+    "build": "ng build --aot --prod",
+    "test": "npm run build"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.1.2",
-    "@angular/compiler": "~2.1.2",
-    "@angular/compiler-cli": "~2.1.2",
-    "@angular/core": "~2.1.2",
-    "@angular/forms": "~2.1.2",
-    "@angular/http": "~2.1.2",
-    "@angular/platform-browser": "~2.1.2",
-    "@angular/platform-browser-dynamic": "~2.1.2",
-    "@angular/platform-server": "~2.1.2",
-    "@angular/router": "~3.1.2",
-    "angular-cli": "^1.0.0-beta.19-3",
-    "angular2-apollo": "../../",
-    "apollo-client": "~0.5.1",
-    "core-js": "~2.4.0",
-    "rxjs": "5.0.0-beta.12",
-    "ts-helpers": "~1.1.1",
-    "whatwg-fetch": "^2.0.1",
-    "zone.js": "~0.6.26"
+    "@angular/common": "^2.4.6",
+    "@angular/compiler": "^2.4.6",
+    "@angular/core": "^2.4.6",
+    "@angular/forms": "^2.4.6",
+    "@angular/platform-browser": "^2.4.6",
+    "@angular/platform-browser-dynamic": "^2.4.6",
+    "@angular/platform-server": "^2.4.6",
+    "@angular/router": "^3.4.6",
+    "apollo-angular": "file:../../",
+    "apollo-client": "~0.8.1",
+    "core-js": "^2.4.1",
+    "graphql-tag": "^1.2.4",
+    "rxjs": "^5.1.0",
+    "ts-helpers": "~1.1.2",
+    "zone.js": "~0.7.6"
   },
   "devDependencies": {
-    "@types/isomorphic-fetch": "0.0.30",
-    "@types/node": "^6.0.38",
-    "angular-cli": "1.0.0-beta.19-3",
-    "apollo-server": "^0.2.6",
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-2": "^6.13.0",
-    "babel-register": "^6.14.0",
-    "body-parser": "^1.15.2",
-    "casual": "^1.5.3",
-    "codelyzer": "~0.0.26",
-    "concurrently": "^2.2.0",
-    "cors": "^2.8.0",
-    "express": "^4.14.0",
-    "graphql": "~0.7.0",
-    "graphql-tools": "~0.8.0",
-    "nodemon": "^1.10.2",
-    "rollup": "^0.36.3",
-    "rollup-plugin-commonjs": "^5.0.5",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-uglify": "^1.0.1",
-    "ts-node": "1.2.1",
-    "tslint": "~3.15.0",
-    "typescript": "~2.0.6",
-    "@angular/compiler-cli": "2.2.1",
-    "@types/jasmine": "2.5.38",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.9",
-    "webdriver-manager": "10.2.5",
-    "@types/chai": "3.4.34",
-    "typed-graphql": "1.0.2"
+    "@angular/compiler-cli": "^2.4.6",
+    "@types/isomorphic-fetch": "0.0.32",
+    "@types/node": "^7.0.4",
+    "angular-cli": "1.0.0-beta.28.3",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "body-parser": "^1.16.0",
+    "casual": "^1.5.10",
+    "codelyzer": "~2.0.0-beta.4",
+    "concurrently": "^3.1.0",
+    "cors": "^2.8.1",
+    "express": "^4.14.1",
+    "graphql": "~0.9.1",
+    "graphql-server-express": "^0.6.0",
+    "graphql-tools": "~0.9.2",
+    "nodemon": "^1.11.0",
+    "ts-node": "2.0.0",
+    "tslint": "^4.4.2",
+    "typescript": "~2.1.5"
   }
 }
