chore: use apollo-test-utils

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/jest": "^15.1.32",
     "@types/node": "^6.0.59",
     "apollo-client": "^0.8.0",
+    "apollo-test-utils": "^0.1.0",
     "graphql": "^0.9.0",
     "graphql-tag": "^1.1.2",
     "husky": "^0.13.0",
