--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -14,27 +14,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/platform-server": "^2.3.1",
-    "@angular/router": "^3.3.1",
+    "@angular/common": "^2.4.9",
+    "@angular/compiler": "^2.4.9",
+    "@angular/core": "^2.4.9",
+    "@angular/forms": "^2.4.9",
+    "@angular/platform-browser": "^2.4.9",
+    "@angular/platform-browser-dynamic": "^2.4.9",
+    "@angular/platform-server": "^2.4.9",
+    "@angular/router": "^3.4.9",
     "apollo-angular": "file:../../",
-    "apollo-client": "~0.8.0",
+    "apollo-client": "^1.0.0-rc.2",
     "core-js": "^2.4.1",
-    "graphql-tag": "^1.1.2",
+    "graphql-tag": "^1.3.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "~1.1.1",
     "zone.js": "~0.7.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.3.1",
-    "@types/isomorphic-fetch": "0.0.30",
-    "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.26",
+    "@angular/compiler-cli": "^2.4.9",
+    "@angular/cli": "1.0.0-rc.2",
     "apollo-codegen": "^0.10.6",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
@@ -47,12 +45,12 @@
     "concurrently": "^3.1.0",
     "cors": "^2.8.0",
     "express": "^4.14.0",
-    "graphql": "~0.8.0",
-    "graphql-server-express": "^0.5.0",
-    "graphql-tools": "~0.9.0",
+    "graphql": "~0.9.0",
+    "graphql-server-express": "^0.6.0",
+    "graphql-tools": "~0.10.1",
     "nodemon": "^1.11.0",
     "ts-node": "2.0.0",
     "tslint": "^4.2.0",
-    "typescript": "~2.0.10"
+    "typescript": "~2.2.1"
   }
 }
