--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
     "apollo-client-rxjs": "~0.5.2"
   },
   "devDependencies": {
-    "@angular/common": "^4.0.0-rc.5",
-    "@angular/compiler": "^4.0.0-rc.5",
-    "@angular/compiler-cli": "^4.0.0-rc.5",
-    "@angular/core": "^4.0.0-rc.5",
-    "@angular/platform-browser": "^4.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "^4.0.0-rc.5",
-    "@angular/platform-server": "^4.0.0-rc.5",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
     "@types/jest": "^19.2.2",
     "@types/node": "^6.0.59",
     "apollo-client": "^1.0.0-rc.2",
