fix(Apollo): query and mutate should not be called till subscribe()

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "apollo-client-rxjs": "~0.5.2"
   },
   "devDependencies": {
+    "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/compiler-cli": "^4.0.0",
