--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,14 @@
   },
   "files": [
     "src/index.ts",
+    "tests/utils.spec.ts",
     "tests/Apollo.spec.ts",
     "tests/SelectPipe.spec.ts",
     "tests/ApolloModule.spec.ts",
     "node_modules/zone.js/dist/zone.js.d.ts"
   ],
   "angularCompilerOptions": {
-    "genDir": "compiled",
+    "skipTemplateCodegen": true,
     "annotateForClosureCompiler": true,
     "strictMetadataEmit": true
   }
