--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-server": "^2.4.9",
     "@angular/router": "^3.4.9",
     "apollo-angular": "file:../../",
-    "apollo-client": "^1.0.0-rc.2",
+    "apollo-client": "^1.0.2",
     "core-js": "^2.4.1",
     "graphql-tag": "^1.3.1",
     "rxjs": "^5.0.1",
