--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -45,7 +45,7 @@
     "concurrently": "^3.1.0",
     "cors": "^2.8.0",
     "express": "^4.14.0",
-    "graphql": "~0.9.0",
+    "graphql": "^0.9.0",
     "graphql-server-express": "^0.6.0",
     "graphql-tools": "~0.10.1",
     "nodemon": "^1.11.0",
