--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-server": "^2.4.9",
     "@angular/router": "^3.4.9",
     "apollo-angular": "file:../../",
-    "apollo-client": "^1.0.0-rc.2",
+    "apollo-client": "^1.0.2",
     "core-js": "^2.4.1",
     "graphql-tag": "^1.3.1",
     "rxjs": "^5.0.1",
@@ -31,8 +31,9 @@
     "zone.js": "~0.7.2"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^2.4.9",
     "@angular/cli": "1.0.0-rc.2",
+    "@angular/compiler-cli": "^2.4.9",
+    "@types/graphql": "^0.9.0",
     "apollo-codegen": "^0.10.6",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
@@ -45,9 +46,9 @@
     "concurrently": "^3.1.0",
     "cors": "^2.8.0",
     "express": "^4.14.0",
-    "graphql": "~0.9.0",
-    "graphql-server-express": "^0.6.0",
-    "graphql-tools": "~0.10.1",
+    "graphql": "^0.9.0",
+    "graphql-server-express": "^0.7.0",
+    "graphql-tools": "~0.11.0",
     "nodemon": "^1.11.0",
     "ts-node": "2.0.0",
     "tslint": "^4.2.0",
