test(Apollo): make sure it SSR properly

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,4 +36,4 @@ script:
 
 after_script:
   # send code-coverage report to coveralls
-  - coveralls < ./coverage/lcov.info || true
+  - coveralls < ./coverage/remapped/lcov.info || true
