--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,7 @@
     "tests/Apollo.spec.ts",
     "tests/SelectPipe.spec.ts",
     "tests/ApolloModule.spec.ts",
+    "tests/integration.spec.ts",
     "node_modules/zone.js/dist/zone.js.d.ts"
-  ],
-  "angularCompilerOptions": {
-    "skipTemplateCodegen": true,
-    "annotateForClosureCompiler": true,
-    "strictMetadataEmit": true
-  }
+  ]
 }
