--- a/package.json
+++ b/package.json
@@ -39,23 +39,24 @@
     "apollo-client-rxjs": "~0.5.2"
   },
   "devDependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/platform-server": "^4.0.0",
+    "@angular/animations": "^4.0.3",
+    "@angular/common": "^4.0.3",
+    "@angular/compiler": "^4.0.3",
+    "@angular/compiler-cli": "^4.0.3",
+    "@angular/core": "^4.0.3",
+    "@angular/http": "^4.0.3",
+    "@angular/platform-browser": "^4.0.3",
+    "@angular/platform-browser-dynamic": "^4.0.3",
+    "@angular/platform-server": "^4.0.3",
     "@types/jest": "^19.2.2",
     "@types/node": "^6.0.59",
-    "apollo-client": "^1.0.0-rc.2",
-    "apollo-test-utils": "^0.2.0",
+    "apollo-client": "^1.0.4",
+    "apollo-test-utils": "^0.3.0",
     "graphql": "^0.9.0",
     "graphql-tag": "^1.3.1",
     "husky": "^0.13.0",
     "jest": "^19.0.2",
+    "jest-zone-patch": "0.0.6",
     "reflect-metadata": "^0.1.10",
     "remap-istanbul": "^0.9.1",
     "rimraf": "^2.6.1",
