docs(example): update HelloWorld

--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -14,44 +14,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.9",
-    "@angular/compiler": "^2.4.9",
-    "@angular/core": "^2.4.9",
-    "@angular/forms": "^2.4.9",
-    "@angular/platform-browser": "^2.4.9",
-    "@angular/platform-browser-dynamic": "^2.4.9",
-    "@angular/platform-server": "^2.4.9",
-    "@angular/router": "^3.4.9",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/platform-server": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "apollo-angular": "file:../../",
-    "apollo-client": "^1.0.2",
+    "apollo-client": "^1.4.1",
     "core-js": "^2.4.1",
-    "graphql-tag": "^1.3.1",
+    "graphql-tag": "^2.2.2",
     "rxjs": "^5.0.1",
     "ts-helpers": "~1.1.1",
-    "zone.js": "~0.7.2"
+    "zone.js": "~0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.2",
-    "@angular/compiler-cli": "^2.4.9",
+    "@angular/cli": "1.1.1",
+    "@angular/compiler-cli": "^4.0.0",
     "@types/graphql": "^0.9.0",
-    "apollo-codegen": "^0.10.6",
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-2": "^6.13.0",
-    "babel-register": "^6.14.0",
-    "body-parser": "^1.15.2",
-    "casual": "^1.5.3",
-    "codelyzer": "~2.0.0-beta.1",
-    "concurrently": "^3.1.0",
-    "cors": "^2.8.0",
-    "express": "^4.14.0",
-    "graphql": "^0.9.0",
-    "graphql-server-express": "^0.7.0",
-    "graphql-tools": "~0.11.0",
+    "@types/node": "~6.0.60",
+    "apollo-codegen": "^0.12.8",
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-stage-2": "^6.23.0",
+    "babel-register": "^6.24.0",
+    "body-parser": "^1.17.2",
+    "casual": "^1.5.12",
+    "codelyzer": "~3.0.1",
+    "concurrently": "^3.4.0",
+    "cors": "^2.8.3",
+    "express": "^4.15.3",
+    "graphql": "^0.10.1",
+    "graphql-server-express": "^0.8.0",
+    "graphql-tools": "^1.0.0",
     "nodemon": "^1.11.0",
-    "ts-node": "2.0.0",
-    "tslint": "^4.2.0",
-    "typescript": "~2.2.1"
+    "ts-node": "^3.0.6",
+    "tslint": "~5.3.2",
+    "typescript": "~2.3.3"
   }
 }
