feat(Apollo): introduce macroTasks to SSR
chore: use tslib to avoid outputing TS helpers
Issue resolved: angular/tsickle#376

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
 
 install:
   - yarn
-  - (cd examples/hello-world && rm -rf node_modules/apollo-angular && npm i)
+  - (cd examples/hello-world && rm -rf node_modules/apollo-angular && yarn)
 
 script:
   - yarn test
