--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "prebuild": "npm run clean",
     "build": "./node_modules/.bin/ngc -p tsconfig.build.json",
     "postbuild": "npm run bundle",
-    "bundle": "rollup -c",
+    "bundle": "rollup -c rollup.config.js",
     "clean": "rimraf build/* coverage/*",
     "prepublish": "npm run clean && npm run build",
     "commitmsg": "validate-commit-msg"
@@ -36,37 +36,39 @@
     "rxjs": "^5.0.0-beta.12 || ^5.0.0-rc.1 || ^5.0.0"
   },
   "dependencies": {
-    "apollo-client-rxjs": "~0.5.2"
+    "apollo-client-rxjs": "~0.5.2",
+    "tslib": "^1.7.1"
   },
   "devDependencies": {
-    "@angular/animations": "^4.0.3",
-    "@angular/common": "^4.0.3",
-    "@angular/compiler": "^4.0.3",
-    "@angular/compiler-cli": "^4.0.3",
-    "@angular/core": "^4.0.3",
-    "@angular/http": "^4.0.3",
-    "@angular/platform-browser": "^4.0.3",
-    "@angular/platform-browser-dynamic": "^4.0.3",
-    "@angular/platform-server": "^4.0.3",
+    "@angular/animations": "~4.2.3",
+    "@angular/common": "~4.2.3",
+    "@angular/compiler": "~4.2.3",
+    "@angular/compiler-cli": "~4.2.3",
+    "@angular/core": "~4.2.3",
+    "@angular/http": "~4.2.3",
+    "@angular/platform-browser": "~4.2.3",
+    "@angular/platform-browser-dynamic": "~4.2.3",
+    "@angular/platform-server": "~4.2.3",
     "@types/jest": "^19.2.2",
     "@types/node": "^6.0.59",
-    "apollo-client": "^1.0.4",
+    "apollo-client": "^1.4.2",
     "apollo-test-utils": "^0.3.0",
-    "graphql": "^0.9.0",
-    "graphql-tag": "^1.3.1",
+    "graphql": "^0.10.3",
+    "graphql-tag": "^2.4.0",
     "husky": "^0.13.0",
-    "jest": "^19.0.2",
-    "jest-zone-patch": "0.0.6",
+    "jest": "~19.0.2",
+    "jest-zone-patch": "0.0.7",
     "reflect-metadata": "^0.1.10",
-    "remap-istanbul": "^0.9.1",
+    "remap-istanbul": "^0.9.5",
     "rimraf": "^2.6.1",
     "rollup": "^0.41.4",
+    "rollup-plugin-node-resolve": "^3.0.0",
     "rxjs": "^5.0.0",
     "ts-jest": "^19.0.9",
     "tslint": "^4.5.1",
-    "typescript": "~2.2.1",
-    "validate-commit-msg": "^2.11.2",
-    "zone.js": "^0.8.4"
+    "typescript": "~2.3.4",
+    "validate-commit-msg": "^2.12.2",
+    "zone.js": "^0.8.12"
   },
   "jest": {
     "globals": {
