--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apollo-angular",
-  "version": "0.13.0",
+  "version": "0.13.1",
   "description": "Angular 2.0 client for Apollo",
   "main": "build/bundles/apollo.umd.js",
   "module": "build/src/index.js",
@@ -33,10 +33,8 @@
   "peerDependencies": {
     "@angular/core": "^2.0.0 || >=4.0.0-beta <5.0.0",
     "apollo-client": ">=0.8.0 <=0.10.1 || >=1.0.0-rc <2.0.0",
-    "rxjs": "^5.0.0-beta.12 || ^5.0.0-rc.1 || ^5.0.0"
-  },
-  "dependencies": {
-    "apollo-client-rxjs": "~0.5.2"
+    "rxjs": "^5.0.0-beta.12 || ^5.0.0-rc.1 || ^5.0.0",
+    "apollo-client-rxjs": "^0.5.2 || ^0.6.0-rc.1"
   },
   "devDependencies": {
     "@angular/animations": "^4.0.3",
