--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   "peerDependencies": {
     "@angular/core": "^2.0.0 || >=4.0.0-beta <5.0.0",
     "apollo-client": ">=0.8.0 <=0.10.1 || >=1.0.0-rc <2.0.0",
-    "rxjs": "^5.0.0-beta.12 || ^5.0.0-rc.1 || ^5.0.0",
-    "apollo-client-rxjs": "^0.5.2 || ^0.6.0-rc.1"
+    "rxjs": "^5.0.0-beta.12 || ^5.0.0-rc.1 || ^5.0.0"
+  },
+  "dependencies": {
+    "apollo-client-rxjs": "^0.6.0-rc.1"
   },
   "devDependencies": {
     "@angular/animations": "^4.0.3",
@@ -62,7 +64,7 @@
     "rxjs": "^5.0.0",
     "ts-jest": "^19.0.9",
     "tslint": "^4.5.1",
-    "typescript": "~2.2.1",
+    "typescript": "~2.4.2",
     "validate-commit-msg": "^2.11.2",
     "zone.js": "^0.8.4"
   },
