--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "peerDependencies": {
     "@angular/core": "^2.0.0 || >=4.0.0-beta <5.0.0",
-    "apollo-client": ">=0.8.0 <=0.10.1 || >=1.0.0-rc <2.0.0",
+    "apollo-client": ">=0.8.0 <=0.10.1 || >=1.0.0-rc <2.0.0 || ^1.9.0 || ^1.8.0",
     "rxjs": "^5.0.0-beta.12 || ^5.0.0-rc.1 || ^5.0.0 || ^5.4.2"
   },
   "dependencies": {
@@ -49,11 +49,12 @@
     "@angular/platform-browser-dynamic": "^4.0.3",
     "@angular/platform-server": "^4.0.3",
     "@types/jest": "^19.2.2",
+    "@types/graphql": "^0.10.2",
     "@types/node": "^6.0.59",
-    "apollo-client": "^1.0.4",
+    "apollo-client": "^1.9.1",
     "apollo-test-utils": "^0.3.0",
-    "graphql": "^0.9.0",
-    "graphql-tag": "^1.3.1",
+    "graphql": "^0.11.2",
+    "graphql-tag": "^2.4.2",
     "husky": "^0.13.0",
     "jest": "^19.0.2",
     "jest-zone-patch": "0.0.6",
