--- a/examples/hello-world/package.json
+++ b/examples/hello-world/package.json
@@ -14,26 +14,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.9",
-    "@angular/compiler": "^2.4.9",
-    "@angular/core": "^2.4.9",
-    "@angular/forms": "^2.4.9",
-    "@angular/platform-browser": "^2.4.9",
-    "@angular/platform-browser-dynamic": "^2.4.9",
-    "@angular/platform-server": "^2.4.9",
+    "@angular/animations": "^4.3.6",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@angular/platform-server": "^4.3.6",
     "@angular/router": "^3.4.9",
     "apollo-angular": "file:../../",
-    "apollo-client": "^1.0.2",
+    "apollo-client": "^1.9.1",
     "core-js": "^2.4.1",
-    "graphql-tag": "^1.3.1",
-    "rxjs": "^5.0.1",
+    "graphql-tag": "^2.4.2",
+    "rxjs": "^5.4.3",
     "ts-helpers": "~1.1.1",
     "zone.js": "~0.7.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-rc.2",
-    "@angular/compiler-cli": "^2.4.9",
-    "@types/graphql": "^0.9.0",
+    "@angular/cli": "^1.3.2",
+    "@angular/compiler-cli": "^4.3.6",
+    "@types/graphql": "^0.10.2",
     "apollo-codegen": "^0.10.6",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
@@ -52,6 +54,6 @@
     "nodemon": "^1.11.0",
     "ts-node": "2.0.0",
     "tslint": "^4.2.0",
-    "typescript": "~2.2.1"
+    "typescript": "~2.4.2"
   }
 }
