--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "deploy": "./scripts/deploy.sh"
   },
   "peerDependencies": {
-    "@angular/core": "^2.0.0 || >=4.0.0-beta <5.0.0",
-    "apollo-client": ">=0.8.0 <=0.10.1 || >=1.0.0-rc <2.0.0 || ^1.9.0 || ^1.8.0",
-    "rxjs": "^5.0.0-beta.12 || ^5.0.0-rc.1 || ^5.0.0 || ^5.4.2"
+    "@angular/core": ">=4.0.0 <5.0.0",
+    "apollo-client": ">=1.0.0 <2.0.0",
+    "rxjs": "^5.0.1"
   },
   "dependencies": {
     "apollo-client-rxjs": "^0.6.0-rc.1"
