--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/platform-server": "^4.3.6",
     "@commitlint/cli": "^3.1.3",
+    "@commitlint/config-angular": "^3.1.1",
     "@types/graphql": "^0.10.2",
     "@types/jest": "^19.2.2",
     "@types/node": "^6.0.59",
