--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "deploy": "./scripts/deploy.sh"
   },
   "peerDependencies": {
-    "@angular/core": "^4.0.0 || ^5.0.0",
+    "@angular/core": "^4.0.0 || ^5.0.0-beta.0",
     "apollo-client": "^1.0.0",
     "rxjs": "^5.0.1"
   },
