--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,17 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
     "target": "es5",
     "module": "es2015",
     "moduleResolution": "node",
     "sourceMap": true,
     "declaration": true,
-    "rootDir": ".",
     "outDir": "build",
     "lib": ["es6", "dom", "esnext"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true
-  },
-  "files": [
-    "src/index.ts",
-    "tests/utils.spec.ts",
-    "tests/Apollo.spec.ts",
-    "tests/SelectPipe.spec.ts",
-    "tests/ApolloModule.spec.ts",
-    "tests/integration.spec.ts",
-    "node_modules/zone.js/dist/zone.js.d.ts"
-  ]
+  }
 }
