--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
 		"prebuild": "rimraf packages/*/build/ packages/*/coverage/",
 		"build": "lerna run -- build",
 		"test": "lerna run -- test",
-		"lint": "lerna run -- lint"
+		"lint": "lerna run -- lint",
+		"commitmsg": "commitlint -e"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^3.1.3",
+		"@commitlint/config-angular": "^3.1.1",
+		"husky": "^0.13.0",
 		"lerna": "^2.4.0",
 		"rimraf": "^2.6.2",
 		"rollup": "^0.50.0"
