--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@commitlint/cli": "^3.1.3",
 		"@commitlint/config-angular": "^3.1.1",
 		"husky": "^0.13.0",
+		"jest": "^21.2.1",
 		"lerna": "^2.4.0",
 		"rimraf": "^2.6.2",
 		"rollup": "^0.50.0"
