feat: Add apollo-angular

--- a/packages/apollo-angular-core/package.json
+++ b/packages/apollo-angular-core/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "apollo-angular-link-http",
+  "name": "apollo-angular-core",
   "author": "Kamil Kisiela <kamil.kisiela@gmail.com> (http://github.com/kamilkisiela/)",
   "license": "MIT",
   "main": "./build/bundle.umd.js",
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
   "typings": "./build/src/index.d.ts",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "scripts": {
     "build": "./node_modules/.bin/ngc -p tsconfig.build.json",
     "bundle": "rollup -c rollup.config.js",
@@ -26,9 +26,6 @@
     "@angular/compiler": "^4.4.4",
     "@angular/compiler-cli": "^4.4.4",
     "@angular/core": "^4.4.4",
-    "@angular/http": "^4.4.4",
-    "@angular/platform-browser": "^4.4.4",
-    "@angular/platform-browser-dynamic": "^4.4.4",
     "@types/graphql": "^0.10.2",
     "@types/jest": "^21.1.2",
     "apollo-cache-inmemory": "^0.2.0-rc.0",
