--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "lerna run -- build",
 		"test": "lerna run -- test",
 		"lint": "lerna run -- lint",
-		"commitmsg": "commitlint -e"
+		"commitmsg": "commitlint -e",
+		"prettier": "prettier --config .prettierrc --write \"packages/*/{src,tests}/**/*.ts\""
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^3.1.3",
@@ -16,6 +17,7 @@
 		"husky": "^0.13.0",
 		"jest": "^21.2.1",
 		"lerna": "^2.4.0",
+		"prettier": "^1.7.4",
 		"rimraf": "^2.6.2",
 		"rollup": "^0.50.0"
 	}
