--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -23,6 +23,7 @@
     "apollo-link": "^0.7.0"
   },
   "devDependencies": {
+    "@angular/animations": "^4.4.4",
     "@angular/common": "^4.4.4",
     "@angular/compiler": "^4.4.4",
     "@angular/compiler-cli": "^4.4.4",
@@ -30,6 +31,7 @@
     "@angular/http": "^4.4.4",
     "@angular/platform-browser": "^4.4.4",
     "@angular/platform-browser-dynamic": "^4.4.4",
+    "@angular/platform-server": "^4.4.4",
     "@types/graphql": "^0.10.2",
     "@types/jest": "^21.1.2",
     "apollo-cache-inmemory": "^0.2.0-rc.0",
