--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^3.1.3",
 		"@commitlint/config-angular": "^3.1.1",
+		"@types/jest": "^21.1.2",
 		"husky": "^0.13.0",
 		"jest": "^21.2.1",
 		"lerna": "^2.4.0",
