--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
 		"deploy": "lerna run -- deploy",
 		"postdeploy": "rimraf packages/*/npm/",
 		"commitmsg": "commitlint -e",
+		"precommit": "lint-staged",
 		"prettier": "prettier --config .prettierrc --write \"packages/*/{src,tests}/**/*.ts\""
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^3.1.3",
 		"@commitlint/config-angular": "^3.1.1",
 		"@types/jest": "^21.1.2",
-		"husky": "^0.13.0",
+		"husky": "^0.14.3",
 		"jest": "^21.2.1",
 		"lerna": "^2.4.0",
+		"lint-staged": "^4.2.3",
 		"prettier": "^1.7.4",
 		"rimraf": "^2.6.2",
 		"rollup": "^0.50.0"
