--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"lint": "lerna run -- lint",
 		"deploy": "lerna run -- deploy",
 		"postdeploy": "rimraf packages/*/npm/",
+		"coverage": "codecov",
 		"commitmsg": "commitlint -e",
 		"precommit": "lint-staged",
 		"prettier": "prettier --config .prettierrc --write \"packages/*/{src,tests}/**/*.ts\""
@@ -18,6 +19,7 @@
 		"@commitlint/cli": "^3.1.3",
 		"@commitlint/config-angular": "^3.1.1",
 		"@types/jest": "^21.1.2",
+		"codecov": "^2.3.1",
 		"husky": "^0.14.3",
 		"jest": "^21.2.1",
 		"lerna": "^2.4.0",
