--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -16,6 +16,7 @@
     "bundle": "rollup -c rollup.config.js",
     "test": "npm run test-only",
     "test-only": "jest --config jest.config.js",
+    "lint": "tslint -c ../../tslint.json -p tsconfig.json --type-check {src,tests}/*.ts",
     "postbuild": "npm run bundle",
     "prepare": "npm run build",
     "deploy": "../../scripts/deploy.sh"
