--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -22,6 +22,8 @@
     "deploy": "../../scripts/deploy.sh"
   },
   "peerDependencies": {
+    "@angular/core": "^4.3.0 || ^5.0.0-rc.0",
+    "@angular/common": "^4.3.0 || ^5.0.0-rc.0",
     "apollo-link": "^0.7.0",
     "graphql": "^0.11.2"
   },
