--- a/packages/apollo-angular-link-http/package.json
+++ b/packages/apollo-angular-link-http/package.json
@@ -6,10 +6,10 @@
   "module": "./build/src/index.js",
   "jsnext:main": "./build/src/index.js",
   "typings": "./build/src/index.d.ts",
-  "version": "0.0.1",
+  "version": "0.0.1-beta.0",
   "repository": {
     "type": "git",
-    "url": "apollographql/angular-apollo"
+    "url": "apollographql/apollo-angular"
   },
   "scripts": {
     "build": "./node_modules/.bin/ngc -p tsconfig.build.json",
