--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -23,7 +23,7 @@
   "peerDependencies": {
     "@angular/core": "^4.0.0 || ^5.0.0-rc.0",
     "apollo-client": "^2.0.0-rc.3",
-    "apollo-link": "^0.8.0",
+    "apollo-link": "^1.0.0",
     "rxjs": "^5.0.1",
     "zone.js": "^0.8.4"
   },
@@ -37,11 +37,11 @@
     "@types/graphql": "^0.10.2",
     "@types/jest": "^21.1.2",
     "@types/zen-observable": "^0.5.3",
-    "apollo-cache-inmemory": "^0.2.0-rc.0",
-    "apollo-client": "^2.0.0-rc.3",
+    "apollo-cache-inmemory": "^1.0.0",
+    "apollo-client": "^2.0.1",
     "apollo-link": "^0.8.0",
     "graphql": "^0.11.7",
-    "graphql-tag": "^2.4.2",
+    "graphql-tag": "^2.5.0",
     "jest": "^21.2.1",
     "jest-zone-patch": "0.0.8",
     "rollup": "^0.50.0",
