--- a/packages/apollo-angular/package.json
+++ b/packages/apollo-angular/package.json
@@ -22,7 +22,7 @@
   },
   "peerDependencies": {
     "@angular/core": "^4.0.0 || ^5.0.0-rc.0",
-    "apollo-client": "^2.0.0-rc.3",
+    "apollo-client": "^2.0.0",
     "apollo-link": "^1.0.0",
     "rxjs": "^5.0.1",
     "zone.js": "^0.8.4"
